tests/ui/span/E0539.stderr
error[E0539]: malformed `inline` attribute input
  --> $DIR/E0539.rs:1:1
   |
LL | #[inline(unknown)]
   | ^^^^^^^^^-------^^
   |          |
   |          valid arguments are `always` or `never`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[inline(unknown)]
LL + #[inline(always|never)]
   |
LL - #[inline(unknown)]
LL + #[inline]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
